attempt #1 to fix overflow issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,8 @@ body {
   justify-content: center;
   flex-direction: column;
   padding: var(--section-spacing);
-  height: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
   overflow-x: hidden;
 }
 
